All_Component_DX/force-app/main/default/objects/SVMX_Job_Stats__c/SVMX_Job_Stats__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object stores vital statistics regarding each ServiceMax job. For example, for OptiMax dispatch optimization jobs, information such as number of work orders considered, number of work orders scheduled, number of technicians etc. are tracked for reporting purposes</description>
    <label>ServiceMax Job Stats</label>
    <nameField>
        <label>Stats Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ServiceMax Job Stats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>