All_Component_DX/force-app/main/default/objects/SVMX_Job_Stats__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of statistics captured</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OptiMax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>