All_Component_DX/force-app/main/default/objects/SVMX_Job_Stats__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <description>Unit of measure for the statistic</description>
    <label>Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>