All_Component_DX/force-app/main/default/objects/SVMX_Job_Stats__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value of the statistic</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>